# templatia

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-mit.md  LIMITATION.md  README-ja.md  README.md  ROADMAP_CHANGES.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
templatia/: Cargo.toml
templatia-derive/: Cargo.toml
templatia-derive/src/: error.rs  fields.rs  generator.rs  lib.rs  parser.rs  render.rs  utils.rs  validator.rs
templatia-derive/src/inv/: error.rs  generator.rs  mod.rs  parser.rs  validator.rs
templatia-derive/tests/: collections_tests.rs  compile_fail.rs  comprehensive_tests.rs  derive_basic.rs  escaped_colon_tests.rs  option_tests.rs  vec_tests.rs
templatia-derive/tests/compile_fail/: consecutive_disallowed.rs  consecutive_disallowed.stderr  missing_field.rs  missing_field.stderr  unsupported_collection.rs  unsupported_collection.stderr  unsupported_map.rs  unsupported_map.stderr  unsupported_result.rs  unsupported_result.stderr  unsupported_tuple.rs  unsupported_tuple.stderr
templatia/src/: lib.rs
templatia/tests/: manual_implementations.rs  template_error.rs
