[package]
name = "templatia-derive"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.21"

# Parser
chumsky = "0.11"

[dev-dependencies]
trybuild = "1.0"
templatia = { path = "../templatia", features = ["derive"] }
