[package]
name = "templatia-derive"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = "2024"
readme = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.21"

[dev-dependencies]
templatia = { path = "../templatia", version = "0.0.1", features = ["derive"] }