[package]
name = "templatia-derive"
description = "A proc_macro for templatia derive"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = "2024"
readme = { workspace = true }
repository = { workspace = true }
homepage =  { workspace = true }
documentation = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.21"

[dev-dependencies]
templatia = { path = "../templatia", features = ["derive"] }