[package]
name = "templatia"
description = "A template library writedown and load the struct"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = ["parser", "template"]
categories = ["parsing", "template-engine"]
edition = "2024"
rust-version = "1.85.0"
readme = { workspace = true }
repository = { workspace = true }
homepage =  { workspace = true }
documentation = { workspace = true }

[dependencies]
thiserror = "2"

templatia-derive = { version = "0.0.2", path = "../templatia-derive", optional = true }
chumsky = { version = "0.11", optional = true }

[features]
derive = ["templatia-derive", "chumsky"]